# blackmamba-cognitive-core

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
blackmamba/: __init__.py  __main__.py
blackmamba/api/: __init__.py  app.py  models.py
blackmamba/cli/: __init__.py  main.py  templates.py
blackmamba/core/: __init__.py  domain_registry.py  domain_router.py  engine.py  input_processor.py  interfaces.py  response_generator.py  technical_types.py  types.py
blackmamba/domains/: __init__.py  electronics_repair.py  event_processing.py  text_analysis.py
blackmamba/memory/: __init__.py  store.py  technical_store.py
blackmamba/utils/: __init__.py  config.py  logging.py
docs/: API_GUIDE.md  ARCHITECTURE.md  ELECTRONICS_REPAIR_DOMAIN.md  EPIC1_PHASE1_SUMMARY.md  EPIC_STATUS.md  IMPLEMENTATION_PLAN.md  PLUGIN_DEVELOPMENT_GUIDE.md  QUICKSTART.md  RELEASE_TIMELINE.md  ROADMAP.md
examples/: api_client.py  basic_text_processing.py  electronics_repair_example.py  event_processing.py  interactive_demo.py  quickstart_template.py  registry_router_example.py
scripts/: deploy.sh  run_tests.sh  start_server.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cognitive_engine.py  test_domain_registry.py  test_domain_router.py  test_electronics_repair.py  test_input_processor.py  test_memory_store.py  test_technical_memory.py
